--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "nueva-carpeta",
+  "name": "processor",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "get": "nodemon src/helpers/getters.js"
   },
   "keywords": [],
   "author": "",
